[metadata]
name = rbdyn
description = Rigid Body Dynamics library
author = Carlos Leite
license = MIT
license_file = LICENSE.md
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    rbdyn
install_requires =
    numpy>=1
    sympy>=1.8
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-dependency>=0.5
    tox>=3.24